--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for HTTP-Proxy-GreaseMonkey
 
-0.01    Sat Dec 15 21:30:51 2007
+0.01    2007-12-17
         - Initial release.
 
+
+0.02    2007-12-17
+        - Documentation fixes
+        - Patch up plist so it finds the gmproxy executable correctly
