--- a/Changes
+++ b/Changes
@@ -7,3 +7,8 @@ Revision history for HTTP-Proxy-GreaseMonkey
 0.02    2007-12-17
         - Documentation fixes
         - Patch up plist so it finds the gmproxy executable correctly
+
+0.03    2007-12-17
+        - Added support GM_xmlhttpRequest
+
+0.04    2007-12-17
